Langraph solar example

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 HUGGINGFACE_TOKEN=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
 GOOGLE_API_KEY=AIzaSyDIrIP-uFh7gZzjV_PUvHwOG6SE1xzpLuc
+TAVILY_API_KEY=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
